# tickets

./: .gitignore  AGENT-ONBOARDING.md  CLAUDE.md  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
acceptor/: Cargo.toml  manifest.toml
acceptor/src/: lib.rs
cli/: Cargo.toml  manifest.toml  tickets
cli/src/: lib.rs
deploy/: DEPLOY.md  manifest.prod.toml  tickets.service
tests/: cli-quoting.sh  comments.sh  status.sh
ticket-handler/: Cargo.toml  manifest.toml
ticket-handler/src/: lib.rs
