[package]
name = "tickets-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "tickets_cli"
crate-type = ["cdylib"]

[dependencies]
packr-guest = { version = "0.5.5", features = ["derive"] }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
