[package]
name = "tickets-handler"
version = "0.1.0"
edition = "2021"

[lib]
name = "tickets_handler"
crate-type = ["cdylib"]

[dependencies]
packr-guest = "0.10.2"
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
